# CppArithmeticalExpressionInterpreter

./: README.md
Interpreter/: CMakeLists.txt
Interpreter/src/: main.cpp
Interpreter/src/Lexer/: additionOperator.h  binaryOperator.h  divisionOperator.h  lexer.cpp  lexer.h  multiplicationOperator.h  subtractionOperator.h  token.h  tokenType.h
Interpreter/src/Parser/: parser.cpp  parser.h
Interpreter/src/Utilities/: charUtilities.cpp  charUtilities.h  fileReader.cpp  fileReader.h
